--- a/cv-alexandre-vidal.css
+++ b/cv-alexandre-vidal.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html, body {
-    background: url(backgrounds/space.jpg);
+    background: url(backgrounds/stars.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Poppins', sans-serif;
     color: white;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 2px 2px 1px black;
 }
 
 h1 {
-    font-size: 200px;
+    font-size: 100px;
     margin-top: 0px;
     margin-bottom: 30px;
     text-shadow: 0px 0px 50px black;
@@ -25,22 +25,23 @@ footer {
 
 #cv {
     font-size: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 #shadow {
-    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    background-color: rgba(0, 0, 0, 0.558);
+    background-color: rgba(0, 0, 0, 0.651);
     padding-top: 30px;
     padding-bottom: 30px;
-    margin-left: 7%;
-    margin-right: 7%;
-    padding-left: 7%;
-    padding-right: 7%;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-left: 4%;
+    padding-right: 4%;
     border-radius: 60px;
 }
+
+
 
 h1, footer {
     text-align: center;
@@ -59,11 +60,11 @@ h2, h3 {
     font-weight: lighter;
 }
 
-.skills ul {    
-    list-style-type: none;
+.skills ul {  
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    list-style-type: none;
 }
 
 li img {
@@ -71,6 +72,7 @@ li img {
     height: 50px;
     padding-right: 50px;
     filter: drop-shadow(5px 5px 5px #000000);
+    padding-bottom: 30px;
 }
 
 a {
@@ -88,3 +90,103 @@ a:hover {
 a:active {
     color: red;
 }
+
+@media (max-width: 1590px) {
+    h1 {
+        font-size: 70px;
+    }
+    #cv, footer {
+        font-size: 40px;
+    }
+
+    #cv {        
+    margin-bottom: 50px;
+    }
+
+    #shadow {
+        margin-left: 3%;
+        margin-right: 3%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+  }
+  
+  @media (max-width: 810px) {
+    h1 {
+        font-size: 70px;
+    }
+    #cv, footer {
+        font-size: 40px;
+    }
+
+    #cv {        
+    margin-bottom: 50px;
+    }
+
+    h2 {
+        font-size: large;
+        text-align: center;
+    }
+
+    h3 {
+        font-size: medium;
+        text-align: center;
+    }
+
+    li {
+        font-size: small;
+    }
+
+    p {
+        font-size: small;
+        text-align: center;
+    }
+
+    #shadow {
+        margin-left: 0%;
+        margin-right: 0%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+  }
+
+  @media (max-width: 412px) {
+    h1 {
+        font-size: 35px;
+        padding-top: 5%;
+    }
+    #cv, footer {
+        font-size: 40px;
+    }
+
+    #cv {       
+        font-size: 30px; 
+    margin-bottom: 30px;
+    }
+
+    h2 {
+        font-size: large;
+        text-align: center;
+    }
+
+    h3 {
+        font-size: medium;
+        text-align: center;
+    }
+
+    li {
+        font-size: small;
+    }
+
+    p {
+        font-size: small;
+        text-align: center;
+    }
+
+    #shadow {
+        margin-left: 0%;
+        margin-right: 0%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+  }
