--- a/cv-alexandre-vidal.css
+++ b/cv-alexandre-vidal.css
@@ -186,3 +186,10 @@ a:active {
         padding-right: 5%;
     }
   }
+
+  @media (max-width: 1920px) {
+    li img {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+  }
