--- a/style.css
+++ b/style.css
@@ -193,3 +193,36 @@ a:active {
         padding-right: 20px;
     }
   }
+
+  @media (max-width: 1536px) {
+    #shadow {
+        flex-direction: column;
+        flex-wrap: wrap;
+        background-color: rgba(0, 0, 0, 0.651);
+        padding-top: 30px;
+        padding-bottom: 30px;
+        margin-left: 25%;
+        margin-right: 25%;
+        padding-left: 4%;
+        padding-right: 4%;
+        border-radius: 60px;
+    }
+
+    h1 {
+        font-size: 100px;
+        margin-top: 0px;
+        margin-bottom: 30px;
+        text-shadow: 0px 0px 50px black;
+    }
+
+    footer {
+        font-size: 50px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    
+    #cv {
+        font-size: 50px;
+        margin-bottom: 50px;
+    }
+  }
